--- a/client/src/components/BlogCard/BlogCard.css
+++ b/client/src/components/BlogCard/BlogCard.css
@@ -11,11 +11,13 @@ a {
   margin: 3vh;
   box-shadow: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px, rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   border-radius: 10px;
+  min-width: 260px;
 }
 
 .blog-card-image {
   height: 10rem;
   margin: 10px 25px;
+  max-width: 100%;
 }
 
 .blog-card-image-div {
@@ -25,6 +27,7 @@ a {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   margin: 1rem;
 }
 
